# dope-plot

./: .gitignore  .mcp.json  README.md  build.py  config.toml  pixel_guard.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
bird_plot/: __init__.py  cli.py  config.py  constants.py
bird_plot/plots/: __init__.py  base.py  radar.py  scatter.py
docs/: DESIGN.md
dope_plot/: __init__.py  cli.py  config.py  constants.py  default_config.toml  mcp_server.py  service.py
dope_plot/plots/: base.py  radar.py  scatter.py
icons/emoji/: README.md
icons/hunt/: README.md
tests/: conftest.py  test_base_render.py  test_cli.py  test_cli_integration.py  test_config.py  test_mcp_server.py  test_radar.py  test_radar_render.py  test_scatter_render.py  test_service.py
