[project]
name = "dope-plot"
version = "0.1.1"
description = "A script to plot bird personality distribution"
authors = [{ name = "Anton Arapov" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
]

[project.scripts]
dope-plot = "dope_plot.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    { path = "dope_plot/default_config.toml", format = ["sdist", "wheel"] },
    { path = "dope_plot/assets/birds/hunt-dove.png", format = ["sdist", "wheel"] },
    { path = "dope_plot/assets/birds/hunt-eagle.png", format = ["sdist", "wheel"] },
    { path = "dope_plot/assets/birds/hunt-owl.png", format = ["sdist", "wheel"] },
    { path = "dope_plot/assets/birds/hunt-peacock.png", format = ["sdist", "wheel"] },
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"
pytest = "^8.3.4"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, B bugbear, UP pyupgrade
select = ["E", "F", "I", "W", "B", "UP"]
