[project]
name = "dope-plot"
version = "0.1.1"
description = "Radar, quadrant and comparison charts for TICK four-bird personality profiles — CLI and MCP server"
authors = [{ name = "Anton Arapov" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["personality", "tick", "disc", "radar-chart", "quadrant", "visualization", "matplotlib", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
]

[project.optional-dependencies]
# Model Context Protocol server, for using dope-plot from Claude / other AIs.
mcp = ["mcp>=1.2.0"]

[project.scripts]
dope-plot = "dope_plot.cli:main"
dope-plot-mcp = "dope_plot.mcp_server:main"

[project.urls]
Homepage = "https://github.com/soil-dev/dope-plot"
Repository = "https://github.com/soil-dev/dope-plot"
Issues = "https://github.com/soil-dev/dope-plot/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    { path = "dope_plot/default_config.toml", format = ["sdist", "wheel"] },
    { path = "dope_plot/assets/birds/hunt-dove.png", format = ["sdist", "wheel"] },
    { path = "dope_plot/assets/birds/hunt-eagle.png", format = ["sdist", "wheel"] },
    { path = "dope_plot/assets/birds/hunt-owl.png", format = ["sdist", "wheel"] },
    { path = "dope_plot/assets/birds/hunt-peacock.png", format = ["sdist", "wheel"] },
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.15"
pytest = "^9.0.3"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, B bugbear, UP pyupgrade
select = ["E", "F", "I", "W", "B", "UP"]
